syntax = "proto2";
package PTP.Other;
import "PTP.Common.proto";
option java_package = "chat.wai.protobuf";

option optimize_for = LITE_RUNTIME;

message OtherNotify{
  required Common.ERR err = 100;
}

message StopChatStreamReq{
  required uint32 chatId = 1;
  required uint32 msgId = 2;
}

